# detr

./: CMakeLists.txt  Orin_steps  README.md  check_components.sh  config_3class.sh  config_coco.sh  config_window.sh  deploy_detection_on_drone.sh  environment.yml  requirements.txt  run_detection.sh
detr/: main.py
detr/datasets/: __init__.py  coco.py
detr/models/: detr.py
docker/: amd.Dockerfile  arm.Dockerfile  arm_nx.Dockerfile  build  build_model_forv_3class  build_model_vulcan_3class  build_windows  docker_How_To  lines.Dockerfile  make_model  notes  run_model_detection  run_model_forv  run_model_vulcan  strip_secrets.Dockerfile
examples/: README.md  image_stdin_to_ros.py  image_tcp_to_ros_bull.py  image_tcp_to_ros_forv.py  repair_red_and_detect.sh
how_to/: about_summary  conda_environment  create_trt_model  how_to_docker  how_to_fine_tune  steps  tensorrt_8.5.2.2  train.sh
include/: System.h  tcp_interface.hpp
my_image_service/: CMakeLists.txt  Dockerfile  README.md  package.xml  setup.py
my_image_service/launch/: image_service.launch.py
my_image_service/my_image_service/: image_service.py  trigger_image.py
scripts/: VisDrone_to_coco.py  add_classes.py  analyse_dataset.py  annotations_to_coco.py  augment_data.py  bgr2rgb.py  check_annotations_inclusion.py  check_class_id.py  check_coco.py  count_annotations.py  create_json.py  csv_to_coco.py  extract.py  fix_annotation_file.py  get_dataset_stats.py  images_stats.py  ir_to_rgb.py  match_annotation_to_images.py  merge_annotations.py  remove_classes.py  remove_image_with_many_instances.py  remove_image_with_small_instances.py  remove_small_annotations.py  show_annotations.py  split_images.py
src/: System.cc  build_model.py  detect.cpp  detect_and_evaluate.py  detect_image.py  detect_ros2.py  detect_service.py  detect_service_geoimage.py  detect_service_geoimage_forv.py  export_torchscript.py  infer_engine.py  serialise_engine.py
src/ros1_rtr8/: build_onnx.py  detect_ros.py  detect_service.py  detect_trt.py  detect_video.py  publish_images.py
tests/: geoimage_to_cv_stdout.py  image_to_cv_stdout.py  image_to_resized_image.py
